--- a/src/App.css
+++ b/src/App.css
@@ -115,3 +115,24 @@ button:active {
     font-size: 18px;
   }
 }
+
+#display { grid-area: display; }
+#clear { grid-area: clear; }
+#negative { grid-area: negative; }
+#percentage { grid-area: percentage; }
+#divide { grid-area: divide; }
+#seven { grid-area: seven; }
+#eight { grid-area: eight; }
+#nine { grid-area: nine; }
+#multiply { grid-area: multiply; }
+#four { grid-area: four; }
+#five { grid-area: five; }
+#six { grid-area: six; }
+#subtract { grid-area: subtract; }
+#one { grid-area: one; }
+#two { grid-area: two; }
+#three { grid-area: three; }
+#add { grid-area: add; }
+#zero { grid-area: zero; }
+#decimal { grid-area: decimal; }
+#equals { grid-area: equals; }
