--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ button:active {
 #expression {
   font-size: 24px;
   height: 24px;
-  color: var(--dark-gray);
+  color: white;
 }
 
 .light-gray {
@@ -109,6 +109,7 @@ button:active {
 
   #answer {
     font-size: 24px;
+    color: white;
   }
 
   #expression {
